# Journal

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
assets/: sample_schedule.json
docs/: ARCHITECTURE.md  run_tests.sh  setup_env.sh
include/data/: grade.hpp  schedule.hpp
include/system/: system_manager.hpp
include/user/: student.hpp  user.hpp
include/utils/: utils.hpp
src/: main.cpp
src/system/: system_manager.cpp
src/user/: admin.cpp  student.cpp  user.cpp
src/utils/: utils.cpp
tests/: test_admin.cpp
